# SWE-P1

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python.yml
app/: __init__.py  routes.py
app/services/: auth_service.py  booking_service.py  calendar_service.py  inventory_service.py  tasks_service.py  technician_service.py  verification_service.py
app/static/: auth.css
app/static/css/: auth.css  booking.css  calendar.css  filter_style.css  home.css  inventory.css  profile.css  room_booking.css  tasks.css  verification.css
app/static/js/: auth.js  booking.js  calendar.js  inventory.js  profile.js  room_booking.js  sidebar.js  tasks.js  verification.js
app/templates/: base.html  booking.html  calendar.html  home.html  inventory.html  login.html  profile.html  room_booking.html  signup.html  tasks.html  tech_inventory.html  verification.html
sql/logic/: functions.sql  triggers.sql
sql/sample-data/: equipment-types.sql  experiment-equipment.sql  experiment-types.sql  inventory-batches.sql  inventory-categories.sql  inventory-items.sql  lab-rooms.sql  lab-zones.sql  room-equipment.sql  suppliers.sql  task-types.sql
sql/schema/: schemas-create.sql  schemas-drop.sql
tests/: test_add_number.py
