[tool.poetry]
name = "swe-p1"
version = "0.1.0"
description = ""
authors = ["Piti Ongmongkolkul <piti118@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.37"
flask-login = "^0.6.3"
pytz = "^2025.1"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
